<resources>
    <string name="app_name">Cut Price BD
    </string>
    <string name="android_pay">Cut Price online  Shop</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="order_now">ORDER  NOW</string>
    <string name="description_example">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>
    <string name="product_size">Size: 40</string>
    <string name="product_color">Color: Black</string>
    <string name="product_price">Price: 80$</string>
    <string name="action_cart">Shopping cart</string>
    <string name="quantity">1</string>
    <string name="product_name">Sleek black top</string>
    <string name="price">100 $</string>
    <string name="remove_from_cart">Remove</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="checkout">Checkout</string>
    <string name="sub_total">Sub total:</string>
    <string name="server_error">Failed to payment information to server</string>
    <string name="successful_payment">Payment successfully uploaded</string>
    <string name="pay_with_paypal">Pay with PayPal</string>


    <string name="title_video">Video</string>
    <string name="title_category">Category</string>
    <string name="title_home">Home</string>
    <string name="title_facebook">Facebook</string>
    <string name="title_profile">Profile</string>

    <string name="tab1">ভ্যালেন্টাইন কার্নিভাল</string>
    <string name="tab2">মেয়েদের শপিং </string>
    <string name="tab3">ছেলেদের শপিং </string>
    <string name="tab4">পাকিস্তানি পোষাক </string>
    <string name="tab5">শিশুর আনুষাঙ্গিক </string>
    <string name="tab6">ইলেকট্রনিক পণ্য</string>
    <string name="tab7">চকলেট</string>
    <string name="tab8">গৃহস্থালী সামগ্রী</string>
    <string name="tab9">উপহার</string>
    <string name="tab10">শিশুদের খাবার</string>
    <string name="tab11">বেবী অ্যান্ড কিডস</string>

    <string name="your_api_key_id" translatable="false">Cutprice@987</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discount">Discount:</string>


    //XML preference string
    <string name="summary_faq">View frequently asked questions</string>
    <string name="privacy_policy">Delivery Method</string>
    <string name="url_privacy">http://cutpricebd.com/old22-04-19/page/delivery_method</string>
    <string name="title_terms">Courier &amp; Service Link</string>
    <string name="url_terms">http://cutpricebd.com/old22-04-19/page/courier_services/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="app_version">1.1</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">High Quality Garments with Low Price.. all are Export Quality garments direct from buying house.\nWebsite: http://cutpricebd.com/</string>

    <string name="open">open</string>
    <string name="close">close</string>

    //For DialogBox
    <string name="title_text">আপনার  অর্ডার নেয়া হয়েছে</string>
    <string name="message_text">আপনি কি বের হতে চান ?</string>
    <string name="title_text2">এইখানে কোন প্রোডাক্ট নেই</string>
    <string name="message_text2">No Internet Connection</string>
    <string name="yes">ফিরে যান</string>

<string name="no">না</string>

    <string name="Home"> হোম</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="hint_address">Address</string>
    <string name="hint_phone">Phone</string>
    <string name="facebook_app_id">337975806850967</string>
    <string name="fb_login_protocol_scheme">fb337975806850967</string>


</resources>
