<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@color/icons"
    tools:context="com.inducesmile.androidpayexample.ProductActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="611dp"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingRight="@dimen/_8sdp">

                    <TextView
                        android:id="@+id/product_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_48sdp"
                        android:text="@string/product_size"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_13sdp" />

                    <TextView
                        android:id="@+id/product_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_32sdp"
                        android:text="@string/product_color"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_13sdp" />

                    <TextView
                        android:id="@+id/product_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_32sdp"
                        android:text="@string/product_price"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_13sdp" />
</LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/full_product_image"
                        android:layout_width="248dp"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/android_pay"
                        android:scaleType="centerCrop"
                        android:src="@drawable/productonebig" />

                </LinearLayout>


            </LinearLayout>
</LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/product_description"
                    android:layout_width="wrap_content"
                    android:layout_height="7dp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/description_example"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/add_to_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/_16sdp"
            android:text="@string/add_to_cart"
            android:textColor="@color/icons"
            android:textSize="@dimen/_16sdp" />

    </FrameLayout>
</LinearLayout>